--- a/package.json
+++ b/package.json
@@ -1,16 +1,34 @@
 {
-  "name": "js-tdd-course",
+  "name": "btc-converter",
   "version": "1.0.0",
-  "description": "Biblioteca do curso TDD",
+  "description": "A CLI to convert bitcoin to any provided currency.",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint src/*.js",
+    "clear": "rimraf bin",
+    "build": "npm run clear && ./node_modules/.bin/babel --out-dir bin src",
+    "build:watch": "npm run build -- --watch",
+    "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
-    "test": "\u001b[D"
+    "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --reporter nyan",
+    "test:tdd": "npm run test -- --watch",
+    "test:coverage": "nyc npm test"
+  },
+  "preferGlobal": true,
+  "bin": {
+    "btc-converter": "bin/main.js"
+  },
+  "nyc": {
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "exclude": [
+      "tests/**"
+    ]
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/caprabell/js-tdd-course.git"
+    "url": "git+https://github.com/caprabell/btc-convert"
   },
   "keywords": [
     "js",
@@ -18,15 +36,22 @@
     "library"
   ],
   "author": "Mauricio Bell",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/caprabell/js-tdd-course/issues"
+    "url": "https://github.com/caprabell/btc-convert/issues"
   },
-  "homepage": "https://github.com/caprabell/js-tdd-course#readme",
+  "homepage": "https://github.com/caprabell/btc-convert#readme",
   "devDependencies": {
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "husky": "^0.14.3"
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.3.2",
+    "babel-register": "^6.24.0",
+    "chai": "^3.5.0",
+    "eslint": "^4.0.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.6.1",
+    "husky": "^0.11.9",
+    "mocha": "^3.2.0",
+    "nyc": "^10.2.0",
+    "rimraf": "^2.6.1"
   }
 }
