--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,13 +2,14 @@
   "extends": "airbnb-base",
   "settings": {
     "react": {
-        "version": "require('./package.json').dependencies.node"
+      "version": "require('./package.json').dependencies.node"
     }
-},
+  },
   "plugins": [
     "node",
-    "import",
-    "jsx-a11y",
-    "flowtype"
-  ]
+    "import"
+  ],
+  "rules": {
+    "no-console": "off"
+  }
 }
